--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,9 +5,9 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
-    "helmet": "^4.4.1"
+    "helmet": "^4.4.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
