--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "run": "node index"
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "discord-oauth2": "^2.6.0",
@@ -8,8 +11,5 @@
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "pug": "^3.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
